# futils

./: .gitignore  README.md  pyproject.toml
src/: io.py
tests/: test_futils.py
