[tool.poetry]
name = "futils"
version = "0.1.0"
description = ""
authors = ["Fabian Gunzinger <fa.gunzinger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
seaborn = "^0.11.2"
s3fs = "^2022.3.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
